<resources>
    <string name="app_name" translatable="false">cSploit</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">cSploit</string>
    <string name="crash_toast_text">Ooooops! I crashed, but a report is going to be sent to my
        developer to help fix the issue :)
    </string>
    <string name="toggle_button">ToggleButton</string>
    <string name="enter_redirection_details">Enter redirection details below:</string>
    <string name="address">Address</string>
    <string name="port">Port</string>
    <string name="ports">Ports</string>
    <string name="target">Target</string>
    <string name="unknown">No information</string>
    <string name="services">Services</string>
    <string name="os">OS</string>
    <string name="device_type">Device Type</string>
    <string name="start_hijack">Tap on a session to start hijacking, long tap to save it to file.
    </string>
    <string name="sort">Sort:</string>
    <string name="select_module">Select a module to run</string>
    <string name="choose">Choose</string>
    <string name="response">Response</string>
    <string name="request">Request</string>
    <string name="wait_for_response">Wait for a response</string>
    <string name="protocol">Protocol</string>
    <string name="csploit_catchphrase">cSploit - An Android network penetration suite.</string>
    <string name="csploit_copyleft">Copyleft of Simone Margaritelli aka evilsocket.</string>
    <string name="csploit_url" translatable="false">http://www.csploit.org/</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="csploit_disclaimer">
        <![CDATA[This application is not to be used for any purposes other than to demonstrate its functions, and must only be used on networks for which you have permission to do so. Any other use is not the responsibility of the developer.In other words, don&apos;t be stupid, and don&apos;t direct angry people towards me.]]></string>
    <string name="license">License</string>
    <string name="gpl_license">This program is free software: you can redistribute it and/or modify
        it under the terms of the GNU General Public License as published by the Free Software
        Foundation, either version 3 of the License, or (at your option) any later version.
        This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
        without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
        See the GNU General Public License for more details.
        You should have received a copy of the GNU General Public License along with this program.
        If not, see https://www.gnu.org/licenses/.\n\nAdditionally, some icons have been distributed
        under the CC-BY 4.0 license and are copyrighted by Google, Inc.
        The full icon set is available at https://www.google.com/design/icons.
    </string>
    <string name="service">Service</string>
    <string name="stopped">Stopped&#8230;</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="stopped_dots">Stopped &#8230;</string>
    <string name="starting_dots">Starting &#8230;</string>
    <string name="max_length">Max Length</string>
    <string name="min_length">Min Length</string>
    <string name="username">Username</string>
    <string name="Charset">Charset</string>
    <string name="filter_desc">Enter a custom replace filter, including simple string replacement or
        regular expressions.
    </string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="wake_on_lan">Wake On Lan</string>
    <string name="send">Send</string>
    <string name="update_available">Update Available</string>
    <string name="new_update_desc">A new update to version</string>
    <string name="new_update_desc2">is available, do you want to download it?</string>
    <string name="checking">Checking&#8230;</string>
    <string name="no_updates_available">No updates available.</string>
    <string name="new_msf_update_desc">A MetasploitFramework update</string>
    <string name="new_version">New version</string>
    <string name="new_version2">found!</string>
    <string name="downloading_update">Downloading update&#8230;</string>
    <string name="connecting">Connecting&#8230;</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>
    <string name="error_occured">An error occurred while downloading the update.</string>
    <string name="invalid_target">Invalid target.</string>
    <string name="add_custom_target">Add custom target</string>
    <string name="enter_url">Enter an URL, host name or IP address below:</string>
    <string name="net_discovery_stopped">Network discovery stopped.</string>
    <string name="net_discovery_started">Network discovery started.</string>
    <string name="start_monitor">Start network monitor</string>
    <string name="stop_monitor">Stop network monitor</string>
    <string name="start_msfrpcd">Start Metasploit RPCD</string>
    <string name="stop_msfrpcd">Stop Metasploit RPCD</string>
    <string name="exit">Exit</string>
    <string name="close_confirm">This will close cSploit, are you sure you want to continue?
    </string>
    <string name="press_back">Press back again to close this app.</string>
    <string name="selected_">Selected: &#160;</string>
    <string name="github_new_issue_url" translatable="false">https://github.com/cSploit/android/issues/new</string>
    <string name="no_session_found">No session file found on sd card.</string>
    <string name="select_session_file">Select a session file from the sd card :</string>
    <string name="select_session">Select session</string>
    <string name="invalid_session">Invalid session name.</string>
    <string name="session_saved_to">Session saved to &#160;</string>
    <string name="save_session">Save session</string>
    <string name="enter_session_name">Enter the name of the session file :</string>
    <string name="new_session_started">New session started</string>
    <string name="warning">Warning</string>
    <string name="choose_method">Choose a method:</string>
    <string name="choose_branch">Choose a branch:</string>
    <string name="menu_submit_issue">Submit issue</string>
    <string name="menu_about">About cSploit</string>
    <string name="pref_general">General</string>
    <string name="pref_modules">Modules</string>
    <string name="pref_msf">Metasploit framework</string>
    <string name="pref_performance">Performance</string>
    <string name="pref_check_updates">Check for updates</string>
    <string name="pref_wake_lock">Wake lock</string>
    <string name="pref_save_path">Save path</string>
    <string name="pref_debug_error_logging">Debug error logging</string>
    <string name="pref_enable_profiler">Code profiler</string>
    <string name="pref_sniffer_sample_time">Sniffer sample time</string>
    <string name="pref_http_proxy_port">HTTP proxy port</string>
    <string name="pref_http_server_port">HTTP server port</string>
    <string name="pref_https_redirect">SSL stripping</string>
    <string name="pref_https_redirector_port">HTTPS redirector port</string>
    <string name="pref_http_max_buffer_size">HTTP max buffer size</string>
    <string name="pref_password_filename">Password sniffer file</string>
    <string name="pref_check_updates_desc">Check for updates every time the application is started.</string>
    <string name="pref_wake_lock_desc">Prevents the device going in sleep mode while the application is running.</string>
    <string name="pref_save_path_desc">Global save path to put every log file.</string>
    <string name="pref_debug_error_logging_desc">Enable or disable error logging on a debug file.</string>
    <string name="pref_enable_profiler_desc">Enable or disable network code profiler logging.</string>
    <string name="pref_sniffer_sample_time_desc">Sample time in seconds of the sniffer module network statistics.</string>
    <string name="pref_http_proxy_port_desc">MITM transparent proxy port to listen on, change this if you have problems starting the proxy.</string>
    <string name="pref_http_server_port_desc">MITM http server port to listen on, change this if you have problems starting the server.</string>
    <string name="pref_https_redirect_desc">Redirect traffic from HTTPS to HTTP.</string>
    <string name="pref_https_redirector_port_desc">MITM https redirection server port to listen on.</string>
    <string name="pref_http_max_buffer_size_desc">Max buffer size of HTTP requests handled by the transparent proxy.</string>
    <string name="pref_password_filename_desc">Name of the file to use to log passwords and cookies.</string>
    <string name="pref_rpc_user">RPC username</string>
    <string name="pref_rpc_user_desc">Username for connect to Metasploit RPCD.</string>
    <string name="pref_rpc_pswd">RPC password</string>
    <string name="pref_rpc_pswd_desc">Password for connect to Metasploit RPCD.</string>
    <string name="pref_rpc_host">RPC host</string>
    <string name="pref_rpc_host_desc">host where the Metasploit RPC server is on</string>
    <string name="pref_rpc_port">RPC port</string>
    <string name="pref_rpc_port_desc">Port for connect to Metasploit RPCD.</string>
    <string name="pref_rpc_ssl">RPC use SSL</string>
    <string name="pref_rpc_ssl_desc">Specify if Metasploit RPC use SSL</string>
    <string name="pref_msfdir">MSF directory</string>
    <string name="pref_msfdir_desc">Directory containing the Metasploit Framework.</string>
    <string name="pref_rubydir">Ruby directory</string>
    <string name="pref_rubydir_desc">Directory containing the Ruby interpreter.</string>
    <string name="pref_msf_branch_desc">The Metasploit Framework branch to use</string>
    <string name="pref_msf_branch_title">MSF branch</string>
    <string name="pref_performance_vuln_desc">Search for vulnerability using</string>
    <string name="pref_performance_exploit_desc">Search exploits</string>
    <string name="pref_performance_widescan">Wide host scan</string>
    <string name="pref_performance_widescan_desc">scan for hosts outside the network mask</string>
    <string name="pref_msf_enable">Enable MSF</string>
    <string name="pref_msf_enable_desc">Enable the Metasploit Framework</string>
    <string name="pref_msf_notifications">MSF status notifications</string>
    <string name="pref_msf_notifications_desc">View MSF RPC connection status</string>
    <string name="pref_msf_delete">Delete MSF</string>
    <string name="pref_msf_delete_desc">Delete the Metasploit Framework from your device</string>
    <string name="pref_auto_portscan">Auto port-scan</string>
    <string name="pref_auto_portscan_desc">Always SYN scan for open ports when new host is discovered</string>
    <string name="pref_theme">Dark theme</string>
    <string name="pref_choose_theme">Enable the dark theme, which is easier on the eyes</string>
    <string name="pref_updates">Updates</string>
    <string name="pref_updates_app">App</string>
    <string name="pref_updates_app_desc">Check for app updates</string>
    <string name="pref_updates_core">Core</string>
    <string name="pref_updates_core_desc">Check for core updates</string>
    <string name="pref_updates_ruby">Ruby</string>
    <string name="pref_updates_ruby_desc">Check for Ruby updates</string>
    <string name="pref_updates_msf">MSF</string>
    <string name="pref_updates_msf_desc">Check for MSF updates</string>
    <string name="pref_updates_gems">RubyGems</string>
    <string name="pref_updates_gems_desc">Check for RubyGems updates</string>
    <string name="pref_msf_manifest">Custom manifest</string>
    <string name="pref_msf_manifest_desc">Custom MSF manifest URL</string>
    <string name="buildinfo">Build info</string>
</resources>