<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/ScrollView01"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="vertical"
                    android:scrollbarAlwaysDrawVerticalTrack="true"
                    android:padding="10dp">

        <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="@string/csploit_catchphrase"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView1"
                android:layout_alignRight="@+id/textView1"
                android:layout_below="@+id/textView1"
                android:text="@string/csploit_copyleft"
                android:textAppearance="?android:attr/textAppearanceSmall"/>

        <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView2"
                android:layout_alignRight="@+id/textView2"
                android:layout_below="@+id/textView2"
                android:autoLink="web"
                android:linksClickable="true"
                android:text="@string/csploit_url"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold"/>

        <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView3"
                android:layout_below="@+id/textView3"
                android:text="@string/disclaimer"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView5"
                android:layout_below="@+id/textView5"
                android:text="@string/csploit_disclaimer"
                android:textAppearance="?android:attr/textAppearanceSmall"/>

        <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView6"
                android:layout_below="@+id/textView6"
                android:text="@string/license"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView7"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/textView7"
                android:text="@string/gpl_license"
                android:textAppearance="?android:attr/textAppearanceSmall"/>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView8"
            android:layout_below="@+id/textView8"
            android:text="@string/buildinfo"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:id="@+id/buildinfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView9"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textView9"
            android:textAppearance="?android:attr/textAppearanceSmall"/>
    </RelativeLayout>

</ScrollView>