<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_network_single"
              android:title="Network" />
        <item
            android:id="@+id/nav_network_list_wrapper"
            android:visible="false"
            android:title="Networks">
            <menu>
                <group android:id="@+id/nav_network_group" />
            </menu>
        </item>
        <item android:id="@+id/nav_msf"
              android:icon="@drawable/exploit_msf"
              android:title="MSF" />
        <item
            android:id="@+id/nav_report_issue"
            android:icon="@drawable/ic_bug_report_24dp"
            android:title="@string/menu_submit_issue" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_24dp"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_24dp"
            android:title="@string/menu_about" />
    </group>
</menu>