<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp">

    <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true">

        <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.50"
                android:text="@string/protocol"
                android:textAllCaps="true"
                android:textColor="@color/app_color"
                android:fontFamily="sans-serif-condensed"
                android:textAppearance="?android:attr/textAppearanceSmall"/>

        <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.50"
                android:text="@string/port"
                android:textAllCaps="true"
                android:textColor="@color/app_color"
                android:fontFamily="sans-serif-condensed"
                android:textAppearance="?android:attr/textAppearanceSmall"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/linearLayout1"
            android:layout_alignRight="@+id/linearLayout1"
            android:layout_marginTop="8dp"
            android:layout_below="@+id/linearLayout1">

        <Spinner
                android:id="@+id/protocolSpinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.50"/>

        <EditText
                android:id="@+id/portText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.50"
                android:ems="10"
                android:fontFamily="monospace"
                android:inputType="number">

            <requestFocus/>
        </EditText>

    </LinearLayout>

    <CheckBox
            android:id="@+id/responseCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/linearLayout2"
            android:layout_below="@+id/linearLayout2"
            android:layout_toLeftOf="@+id/sendWOL"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"/>

    <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/responseCheckBox"
            android:layout_alignRight="@+id/sendWOL"
            android:layout_marginTop="32dp"
            android:layout_below="@+id/responseCheckBox">

        <TextView
                android:id="@+id/textView3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.50"
                android:text="@string/request"
                android:textAllCaps="true"
                android:textColor="@color/app_color"
                android:fontFamily="sans-serif-condensed"
                android:textAppearance="?android:attr/textAppearanceSmall"/>

        <TextView
                android:id="@+id/textView4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.50"
                android:text="@string/response"
                android:textAllCaps="true"
                android:textColor="@color/app_color"
                android:fontFamily="sans-serif-condensed"
                android:textAppearance="?android:attr/textAppearanceSmall"/>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/sendButton"
            android:layout_alignLeft="@+id/linearLayout3"
            android:layout_alignRight="@+id/sendWOL"
            android:layout_below="@+id/linearLayout3">

        <EditText
                android:id="@+id/dataText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.50"
                android:ems="10"
                android:gravity="left|top"
                android:fontFamily="monospace"
                android:textSize="14sp"
                android:inputType="text"/>

        <EditText
                android:id="@+id/responseText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.50"
                android:editable="false"
                android:ems="10"
                android:gravity="left|top"
                android:fontFamily="monospace"
                android:textSize="14sp"
                android:inputType="text"/>

    </LinearLayout>

    <ToggleButton
            android:id="@+id/sendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:textOff="@string/send"
            android:textOn="@string/stop"
            android:textAllCaps="true"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:fontFamily="sans-serif-condensed"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/app_color"
        />

    <Button
            android:id="@+id/sendWOL"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_above="@+id/linearLayout3"
            android:layout_alignRight="@+id/linearLayout2"
            android:layout_alignTop="@+id/responseCheckBox"
            android:textAllCaps="true"
            android:fontFamily="sans-serif-condensed"
        android:backgroundTint="@color/app_color"
        android:textColor="@android:color/white"
            android:text="@string/wake_on_lan"/>

</RelativeLayout>